Fix clipping issue in style editor

--- a/src/framework/graph-visualiser/style-editor/graph-styles-pane.component.scss
+++ b/src/framework/graph-visualiser/style-editor/graph-styles-pane.component.scss
@@ -4,7 +4,6 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 100%;
   min-width: 0;
   white-space: normal !important;
   font-weight: var(--font-weight-regular);
